--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Apr 27 2023 21:03:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 04 2023 23:45:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64289b02a3e86e881a226992" data-wf-site="64289b02a3e86e504422698e">
 <head>
   <meta charset="utf-8">
@@ -54,7 +54,7 @@
         </div>
         <div class="hero-image-wrap">
           <div class="hero-green-circle"></div>
-          <div class="card-image"><img src="images/5.blue.transparent.white.png" loading="lazy" style="opacity:0" data-w-id="79ada8a6-d2e5-ef32-e1e6-b4d4da6c069a" alt="" class="card-one"><img src="images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54.png" loading="lazy" style="opacity:0" data-w-id="45a9706c-f85f-7f10-79e9-c0622b9ac023" srcset="images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54-p-500.png 500w, images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54-p-800.png 800w, images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54.png 1024w" sizes="100vw" alt="" class="card-two"></div><img src="images/hero-image.png" loading="lazy" sizes="100vw" srcset="images/hero-image-p-500.png 500w, images/hero-image-p-800.png 800w, images/hero-image-p-1080.png 1080w, images/hero-image.png 1408w" alt="Hero Image Main" class="hide">
+          <div class="card-image"><img src="images/5.blue.transparent.white.png" loading="lazy" style="opacity:0" data-w-id="79ada8a6-d2e5-ef32-e1e6-b4d4da6c069a" alt="" class="card-one"><img src="images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54.png" loading="lazy" style="opacity:0" data-w-id="45a9706c-f85f-7f10-79e9-c0622b9ac023" srcset="images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54-p-500.png 500w, images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54-p-800.png 800w, images/Boeing_747_ATM_logo_fe5fd3d1-681c-44a6-94f1-5ef18f02ed54.png 1024w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 424.20068359375px, (max-width: 1439px) 86vw, (max-width: 1919px) 59vw, 44vw" alt="" class="card-two"></div><img src="images/hero-image.png" loading="lazy" sizes="100vw" srcset="images/hero-image-p-500.png 500w, images/hero-image-p-800.png 800w, images/hero-image-p-1080.png 1080w, images/hero-image.png 1408w" alt="Hero Image Main" class="hide">
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
               <div style="background-color:rgb(255,255,255)" class="icon-box"><img src="images/map-pin-icon.svg" loading="lazy" alt="Map Pin Icon" class="card-icon"></div>
               <h3 class="service-box-title">Genmega 2500</h3>
               <p class="services-box-text">Barbershops, events and convenience stores<br></p>
-            </div><img src="images/Genmega-2500.png" loading="lazy" sizes="100vw" srcset="images/Genmega-2500-p-500.png 500w, images/Genmega-2500.png 641w" alt="">
+            </div><img src="images/Genmega-2500.png" loading="lazy" sizes="(max-width: 479px) 81vw, (max-width: 745px) 86vw, (max-width: 767px) 641px, (max-width: 991px) 27vw, (max-width: 1439px) 22vw, 298.65625px" srcset="images/Genmega-2500-p-500.png 500w, images/Genmega-2500.png 641w" alt="">
             <p class="services-box-text">The Genmega G2500 ATM machine is preferred by customers over competitors due to its professional and bank-like appearance. It is designed for retail and off-premise financial institution locations and offers a variety of hardware configuration choices. The machine is user-friendly, visually appealing, and considered one of the best machines from a service standpoint.<br></p>
             <div class="card-hover"></div>
             <p class="services-box-text"><br></p>
@@ -141,7 +141,7 @@
               <h3 class="service-box-title">Genmega Onyx</h3>
               <p class="services-box-text">Hotels, Restaurants and Bars<br></p>
             </div>
-            <div class="card-hover"></div><img src="images/Genmega-Onyx.png" loading="lazy" sizes="100vw" srcset="images/Genmega-Onyx-p-500.png 500w, images/Genmega-Onyx.png 611w" alt="">
+            <div class="card-hover"></div><img src="images/Genmega-Onyx.png" loading="lazy" sizes="(max-width: 479px) 81vw, (max-width: 718px) 85vw, (max-width: 767px) 611px, (max-width: 991px) 27vw, (max-width: 1439px) 22vw, 298.65625px" srcset="images/Genmega-Onyx-p-500.png 500w, images/Genmega-Onyx.png 611w" alt="">
             <p class="services-box-text">The Genmega Onyx ATM is a budget-friendly, high-end retail ATM designed to make a statement and encourage usage. Its compact, sleek, and sophisticated design, along with its dark gunmetal paint, black bezel, and large LCD display, make it popular in fancy hotel lobbies and nightclubs. The ATM is available in various dispenser configurations and printer options, making it highly customizable to fit different needs and locations.<br></p>
           </a>
           <a data-w-id="467094fd-824b-652e-b7b0-db45d7e01068" style="background-color:rgb(21,21,21)" href="#" class="block w-inline-block">
@@ -150,7 +150,7 @@
               <h3 class="service-box-title">Genmega C6000<br></h3>
               <p class="services-box-text">Gentlemen&#x27;s Clubs<br></p>
             </div>
-            <div class="card-hover"></div><img src="images/Genmega-6000.png" loading="lazy" sizes="100vw" srcset="images/Genmega-6000-p-500.png 500w, images/Genmega-6000.png 624w" alt="">
+            <div class="card-hover"></div><img src="images/Genmega-6000.png" loading="lazy" sizes="(max-width: 479px) 81vw, (max-width: 734px) 85vw, (max-width: 767px) 624px, (max-width: 991px) 27vw, (max-width: 1439px) 22vw, 298.65625px" srcset="images/Genmega-6000-p-500.png 500w, images/Genmega-6000.png 624w" alt="">
             <p class="services-box-text">The Genmega C6000 ATM machine offers a variety of options for every budget and application, including a Level One rated safe, presenter style cash dispenser, and touch screen. Its standout feature is a 15&quot; standard display, which can be upgraded to a touch screen. The ATM is popular in high-end salons, nightclubs, casinos, poker rooms, and convenience stores, and is frequently used for off-premise financial branded ATMs. Online pricing is inclusive of a Best Products ATM processing discount, and additional fees may apply for installation in remote regions.<br></p>
           </a>
         </div>
@@ -178,21 +178,21 @@
           </div>
           <div class="review-slide w-slide">
             <div class="review-block">
-              <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel</p>
+              <p class="review-text">Secured Transactions has been a lifesaver for our barbershop. Before we installed their ATM, we were constantly running out of cash and losing customers who didn&#x27;t want to pay the ATM fees at nearby stores. Now, our clients can easily access cash right in our shop, and we&#x27;ve seen an uptick in business as a result.</p>
               <div class="client-info"><img src="images/ranveer_1ranveer.png" loading="lazy" alt="Ranveer Client Image" class="person-image">
                 <div>
-                  <p class="client-name">Ranveer</p>
-                  <p class="client-position">Webflow Developer</p>
+                  <p class="client-name">Devan</p>
+                  <p class="client-position">Barber Shop</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="review-slide w-slide">
             <div class="review-block">
-              <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel</p>
+              <p class="review-text">I recently attended a large event that had multiple ATMs from Secured Transactions. I was impressed with how easy they were to use and how fast the transactions went through. Even though there were hundreds of people there, I never had to wait more than a few minutes to get cash from the ATMs.</p>
               <div class="client-info"><img src="images/tony-stark_1tony-stark.png" loading="lazy" alt="Tony Stark Client Image" class="person-image">
                 <div>
-                  <p class="client-name">Tony Stark</p>
+                  <p class="client-name">Roy</p>
                   <p class="client-position">CEO</p>
                 </div>
               </div>
@@ -200,33 +200,33 @@
           </div>
           <div class="review-slide w-slide">
             <div class="review-block">
-              <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel</p>
+              <p class="review-text">As a restaurant owner, I was hesitant to install an ATM because I didn&#x27;t want it to take away from our main business. However, Secured Transactions convinced me to give it a try and I&#x27;m glad I did. We&#x27;ve had a lot of customers use the ATM and it&#x27;s been a great way to keep them in the restaurant longer.</p>
               <div class="client-info"><img src="images/person_1person.png" loading="lazy" alt="Person" class="person-image">
                 <div>
-                  <p class="client-name">Mahesh</p>
-                  <p class="client-position">CEO</p>
+                  <p class="client-name">Ezekiel</p>
+                  <p class="client-position">Mahesh Mediterranean</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="review-slide w-slide">
             <div class="review-block">
-              <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel</p>
+              <p class="review-text">Secured Transactions has been a valuable partner for our gentleman&#x27;s club. Their ATMs are discreet and easy to use, and our clients appreciate being able to get cash without having to leave the club. We&#x27;ve seen an increase in revenue since we installed the ATM, and the fees have been a nice added bonus.</p>
               <div class="client-info"><img src="images/mahesh_1mahesh.png" loading="lazy" alt="Mahesh Client Image" class="person-image">
                 <div>
-                  <p class="client-name">Mahesh</p>
-                  <p class="client-position">CEO</p>
+                  <p class="client-name">Jonah</p>
+                  <p class="client-position">Gentleman&#x27;s Club</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="review-slide w-slide">
             <div class="review-block">
-              <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel</p>
-              <div class="client-info"><img src="images/ranveer_1ranveer.png" loading="lazy" alt="Ranveer Client Image" class="person-image">
+              <p class="review-text">We installed a Secured Transactions ATM in our hotel lobby last year and it&#x27;s been a great addition to our amenities.</p>
+              <div class="client-info"><img src="images/messenger.svg" loading="lazy" alt="White Messenger Icon" class="person-image">
                 <div>
-                  <p class="client-name">Ranveer</p>
-                  <p class="client-position">Webflow Developer</p>
+                  <p class="client-name">John</p>
+                  <p class="client-position">Hotel Brand</p>
                 </div>
               </div>
             </div>
@@ -284,7 +284,7 @@
       </div>
       <div id="Contact" class="contact">
         <div class="form_block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form"><label for="First-name" class="form_field-label">Would extra cash flow benefit your business?</label><label class="w-checkbox checkbox-field"><input type="checkbox" id="checkbox" name="checkbox" data-name="Checkbox" class="w-checkbox-input"><span class="checkbox-label-7 w-form-label" for="checkbox">Yes</span></label><label class="w-checkbox checkbox-field-2"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input"><span class="checkbox-label-8 w-form-label" for="checkbox-2">No</span></label><label for="field" class="form_field-label">What type of business are you?</label><select id="field" name="field" data-name="Field" required="" class="select-field w-select">
+          <form id="email-form" name="email-form" data-name="Email Form" method="post" data-netlify="true" class="form"><label for="First-name" class="form_field-label">Would extra cash flow benefit your business?</label><label class="w-checkbox checkbox-field"><input type="checkbox" id="checkbox" name="checkbox" data-name="Checkbox" class="w-checkbox-input"><span class="checkbox-label-7 w-form-label" for="checkbox">Yes</span></label><label class="w-checkbox checkbox-field-2"><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" class="w-checkbox-input"><span class="checkbox-label-8 w-form-label" for="checkbox-2">No</span></label><label for="field" class="form_field-label">What type of business are you?</label><select id="field" name="field" data-name="Field" required="" class="select-field w-select">
               <option value="">Select one...</option>
               <option value="First">Convenience store, Tobacco/vape store,</option>
               <option value="Second">Bar, or Restaurant or hotel</option>
